# invoice_web_app

./: Dockerfile  README.md  compose.yaml  pyproject.toml  requirements.txt
DRF/: settings.py  urls.py
Docs/ER_Diagram/: auth_group.drawio
client/: admin.py  models.py  serializers.py  urls.py  views.py
client/migrations/: 0001_initial.py
invoice/: admin.py  serializers.py  urls.py  views.py
invoice/migrations/: 0001_initial.py
invoice/models/: __init__.py  invoice.py  item.py
invoice_web_app/: apps.py  urls.py
teams/: models.py  serializers.py  urls.py  views.py
teams/migrations/: 0001_initial.py  0002_team_address1_team_address2_team_bankaccount_and_more.py
