[tool.poetry]
name = "drf"
version = "0.1.0"
description = ""
authors = ["obamwonyi <developer.oduwa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
djoser = "^2.2.2"
django = "^5.0.1"
djangorestframework = "^3.14.0"
django-cors-headers = "^4.3.1"
psycopg2-binary = "^2.9.9"
django-extensions = "^3.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
